// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-auto-complete.vue Demo- 1`] = `
<div>
  <div>
    <span>
      b
    </span>
     
    <span>
      普通输入框
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo- 2`] = `
<div>
  <div>
    <span>
      b
    </span>
     
    <span>
      加密输入框
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo- 3`] = `
<div>
  <div
    clearable="可清除输入框"
  >
    <span>
      b
    </span>
     
    <span
      style="display: none;"
    >
      
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <span>
      <!---->
       
      <!---->
       
      <span />
    </span>
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo- 4`] = `
<div>
  <div
    size="huge"
  >
    <span>
      b
    </span>
     
    <span>
      大输入框
    </span>
     
    <!---->
     
    <input
      size="huge"
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo- 5`] = `
<div>
  <div
    size="medium"
  >
    <span>
      b
    </span>
     
    <span>
      中等输入框
    </span>
     
    <!---->
     
    <input
      size="medium"
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo- 6`] = `
<div>
  <div
    size="small"
  >
    <span>
      b
    </span>
     
    <span>
      小输入框
    </span>
     
    <!---->
     
    <input
      size="small"
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo- 7`] = `
<div>
  <div
    prefix="search"
    size="normal medium"
  >
    <span>
      b
    </span>
     
    <span>
      搜索框
    </span>
     
    <!---->
     
    <input
      size="normal medium"
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <span>
      <!---->
       
      <!---->
       
      <!---->
    </span>
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo- 8`] = `
<div>
  <div
    size="normal medium"
    suffix="search"
  >
    <span>
      b
    </span>
     
    <span>
      搜索框
    </span>
     
    <!---->
     
    <input
      size="normal medium"
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <span>
      <!---->
       
      <!---->
       
      <!---->
    </span>
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo-@deprecated 搜索图标 1`] = `
<div>
  <div
    class="root"
    direction="horizontal"
    type=""
    vusion-slot-name="default"
  >
    <div
      search="left"
      size="normal medium"
    >
      <span>
        b
      </span>
       
      <span>
        1~12位小写字母
      </span>
       
      <!---->
       
      <input
        size="normal medium"
        type="text"
      />
       
      <transition-stub
        class="popper"
        name="fade"
      >
        <div
          class="root"
          style="display: none;"
        >
          <span
            class="arrow"
            style="display: none;"
          />
           
          <div
            border="true"
            class="root listview"
            tabindex="0"
          >
            <div
              style="display: none;"
            >
              <!---->
               
              <span
                vusion-slot-name="title"
              >
                列表
              </span>
               
              <div>
                <!---->
              </div>
            </div>
             
            <!---->
             
            <div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              style="display: none;"
            >
               
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
       
      <span>
        <!---->
         
        <!---->
         
        <!---->
      </span>
    </div>
     
    <div
      search="right"
      size="normal medium"
    >
      <span>
        b
      </span>
       
      <span>
        1~12位小写字母
      </span>
       
      <!---->
       
      <input
        size="normal medium"
        type="text"
      />
       
      <transition-stub
        class="popper"
        name="fade"
      >
        <div
          class="root"
          style="display: none;"
        >
          <span
            class="arrow"
            style="display: none;"
          />
           
          <div
            border="true"
            class="root listview"
            tabindex="0"
          >
            <div
              style="display: none;"
            >
              <!---->
               
              <span
                vusion-slot-name="title"
              >
                列表
              </span>
               
              <div>
                <!---->
              </div>
            </div>
             
            <!---->
             
            <div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              style="display: none;"
            >
               
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
       
      <span>
        <!---->
         
        <!---->
         
        <!---->
      </span>
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo-data-source 函数 1`] = `
<div>
  <span>
    b
  </span>
   
  <span
    style="display: none;"
  >
    
  </span>
   
  <!---->
   
  <input
    type="text"
  />
   
  <transition-stub
    class="popper"
    name="fade"
  >
    <div
      class="root"
      style="display: none;"
    >
      <span
        class="arrow"
        style="display: none;"
      />
       
      <div
        border="true"
        class="root listview"
        tabindex="0"
      >
        <div
          style="display: none;"
        >
          <!---->
           
          <span
            vusion-slot-name="title"
          >
            列表
          </span>
           
          <div>
            <!---->
          </div>
        </div>
         
        <!---->
         
        <div>
           
          <!---->
           
          <div
            status="loading"
            vusion-slot-name="loading"
          >
            <div
              class="root"
            />
             正在加载中... 
            <!---->
          </div>
        </div>
         
        <div
          style="display: none;"
        >
           
          <!---->
        </div>
      </div>
    </div>
  </transition-stub>
   
  <!---->
</div>
`;

exports[`u-auto-complete.vue Demo-data-source 数组 1`] = `
<div>
  <span>
    b
  </span>
   
  <span
    style="display: none;"
  >
    
  </span>
   
  <!---->
   
  <input
    type="text"
  />
   
  <transition-stub
    class="popper"
    name="fade"
  >
    <div
      class="root"
      style="display: none;"
    >
      <span
        class="arrow"
        style="display: none;"
      />
       
      <div
        border="true"
        class="root listview"
        tabindex="0"
      >
        <div
          style="display: none;"
        >
          <!---->
           
          <span
            vusion-slot-name="title"
          >
            列表
          </span>
           
          <div>
            <!---->
          </div>
        </div>
         
        <!---->
         
        <div>
           
          <div
            style="padding-top: 0px; padding-bottom: 0px;"
          >
            <div
              class="root"
              index="0"
              vusion-slot-name="item"
            >
              <!---->
               Batch
              <!---->
            </div>
            <div
              class="root"
              index="1"
              vusion-slot-name="item"
            >
              <!---->
               C
              <!---->
            </div>
            <div
              class="root"
              index="2"
              vusion-slot-name="item"
            >
              <!---->
               C#
              <!---->
            </div>
            <div
              class="root"
              index="3"
              vusion-slot-name="item"
            >
              <!---->
               C++
              <!---->
            </div>
            <div
              class="root"
              index="4"
              vusion-slot-name="item"
            >
              <!---->
               CSS
              <!---->
            </div>
            <div
              class="root"
              index="5"
              vusion-slot-name="item"
            >
              <!---->
               Clojure
              <!---->
            </div>
            <div
              class="root"
              index="6"
              vusion-slot-name="item"
            >
              <!---->
               CoffeeScript
              <!---->
            </div>
            <div
              class="root"
              index="7"
              vusion-slot-name="item"
            >
              <!---->
               Coq
              <!---->
            </div>
            <div
              class="root"
              index="8"
              vusion-slot-name="item"
            >
              <!---->
               Diff
              <!---->
            </div>
            <div
              class="root"
              index="9"
              vusion-slot-name="item"
            >
              <!---->
               Dockerfile
              <!---->
            </div>
            <div
              class="root"
              index="10"
              vusion-slot-name="item"
            >
              <!---->
               F#
              <!---->
            </div>
            <div
              class="root"
              index="11"
              vusion-slot-name="item"
            >
              <!---->
               Go
              <!---->
            </div>
            <div
              class="root"
              index="12"
              vusion-slot-name="item"
            >
              <!---->
               Groovy
              <!---->
            </div>
            <div
              class="root"
              index="13"
              vusion-slot-name="item"
            >
              <!---->
               HLSL
              <!---->
            </div>
            <div
              class="root"
              index="14"
              vusion-slot-name="item"
            >
              <!---->
               HTML
              <!---->
            </div>
            <div
              class="root"
              index="15"
              vusion-slot-name="item"
            >
              <!---->
               Handlebars
              <!---->
            </div>
            <div
              class="root"
              index="16"
              vusion-slot-name="item"
            >
              <!---->
               Ignore
              <!---->
            </div>
            <div
              class="root"
              index="17"
              vusion-slot-name="item"
            >
              <!---->
               Ini
              <!---->
            </div>
            <div
              class="root"
              index="18"
              vusion-slot-name="item"
            >
              <!---->
               JSON
              <!---->
            </div>
            <div
              class="root"
              index="19"
              vusion-slot-name="item"
            >
              <!---->
               Java
              <!---->
            </div>
            <div
              class="root"
              index="20"
              vusion-slot-name="item"
            >
              <!---->
               JavaScript
              <!---->
            </div>
            <div
              class="root"
              index="21"
              vusion-slot-name="item"
            >
              <!---->
               Jinja
              <!---->
            </div>
            <div
              class="root"
              index="22"
              vusion-slot-name="item"
            >
              <!---->
               Jupyter
              <!---->
            </div>
            <div
              class="root"
              index="23"
              vusion-slot-name="item"
            >
              <!---->
               Less
              <!---->
            </div>
            <div
              class="root"
              index="24"
              vusion-slot-name="item"
            >
              <!---->
               Log
              <!---->
            </div>
            <div
              class="root"
              index="25"
              vusion-slot-name="item"
            >
              <!---->
               Lua
              <!---->
            </div>
            <div
              class="root"
              index="26"
              vusion-slot-name="item"
            >
              <!---->
               Makefile
              <!---->
            </div>
            <div
              class="root"
              index="27"
              vusion-slot-name="item"
            >
              <!---->
               Markdown
              <!---->
            </div>
            <div
              class="root"
              index="28"
              vusion-slot-name="item"
            >
              <!---->
               Objective-C
              <!---->
            </div>
            <div
              class="root"
              index="29"
              vusion-slot-name="item"
            >
              <!---->
               Objective-C++
              <!---->
            </div>
            <div
              class="root"
              index="30"
              vusion-slot-name="item"
            >
              <!---->
               PHP
              <!---->
            </div>
            <div
              class="root"
              index="31"
              vusion-slot-name="item"
            >
              <!---->
               Perl
              <!---->
            </div>
            <div
              class="root"
              index="32"
              vusion-slot-name="item"
            >
              <!---->
               PowerShell
              <!---->
            </div>
            <div
              class="root"
              index="33"
              vusion-slot-name="item"
            >
              <!---->
               Properties
              <!---->
            </div>
            <div
              class="root"
              index="34"
              vusion-slot-name="item"
            >
              <!---->
               Pug
              <!---->
            </div>
            <div
              class="root"
              index="35"
              vusion-slot-name="item"
            >
              <!---->
               Python
              <!---->
            </div>
            <div
              class="root"
              index="36"
              vusion-slot-name="item"
            >
              <!---->
               R
              <!---->
            </div>
            <div
              class="root"
              index="37"
              vusion-slot-name="item"
            >
              <!---->
               Razor
              <!---->
            </div>
            <div
              class="root"
              index="38"
              vusion-slot-name="item"
            >
              <!---->
               Ruby
              <!---->
            </div>
            <div
              class="root"
              index="39"
              vusion-slot-name="item"
            >
              <!---->
               Rust
              <!---->
            </div>
            <div
              class="root"
              index="40"
              vusion-slot-name="item"
            >
              <!---->
               SCSS
              <!---->
            </div>
            <div
              class="root"
              index="41"
              vusion-slot-name="item"
            >
              <!---->
               SQL
              <!---->
            </div>
            <div
              class="root"
              index="42"
              vusion-slot-name="item"
            >
              <!---->
               SVG
              <!---->
            </div>
            <div
              class="root"
              index="43"
              vusion-slot-name="item"
            >
              <!---->
               Shaderlab
              <!---->
            </div>
            <div
              class="root"
              index="44"
              vusion-slot-name="item"
            >
              <!---->
               Shell Script
              <!---->
            </div>
            <div
              class="root"
              index="45"
              vusion-slot-name="item"
            >
              <!---->
               Swift
              <!---->
            </div>
            <div
              class="root"
              index="46"
              vusion-slot-name="item"
            >
              <!---->
               TypeScript
              <!---->
            </div>
            <div
              class="root"
              index="47"
              vusion-slot-name="item"
            >
              <!---->
               Visual Basic
              <!---->
            </div>
            <div
              class="root"
              index="48"
              vusion-slot-name="item"
            >
              <!---->
               Vue
              <!---->
            </div>
            <div
              class="root"
              index="49"
              vusion-slot-name="item"
            >
              <!---->
               XML
              <!---->
            </div>
            <div
              class="root"
              index="50"
              vusion-slot-name="item"
            >
              <!---->
               XSL
              <!---->
            </div>
            <div
              class="root"
              index="51"
              vusion-slot-name="item"
            >
              <!---->
               YAML
              <!---->
            </div>
          </div>
           
          <!---->
        </div>
         
        <div
          style="display: none;"
        >
           
          <!---->
        </div>
      </div>
    </div>
  </transition-stub>
   
  <!---->
</div>
`;

exports[`u-auto-complete.vue Demo-加密 1`] = `
<div>
  <div
    maxlength="12"
    type="password"
  >
    <span>
      b
    </span>
     
    <span>
      请输入密码
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo-双向绑定 1`] = `
<div
  class="root"
  direction="horizontal"
  type=""
  vusion-slot-name="default"
>
  <div
    maxlength="12"
  >
    <span>
      b
    </span>
     
    <span>
      
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
   
  <div
    maxlength="12"
  >
    <span>
      b
    </span>
     
    <span>
      
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
   
  <div
    maxlength="12"
  >
    <span>
      b
    </span>
     
    <span>
      
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
   
  <!---->
   
  <!---->
</div>
`;

exports[`u-auto-complete.vue Demo-只读和禁用 1`] = `
<div>
  <div
    class="root"
    direction="horizontal"
    type=""
    vusion-slot-name="default"
  >
    <div
      readonly="readonly"
    >
      <span>
        b
      </span>
       
      <span
        style="display: none;"
      >
        
      </span>
       
      <!---->
       
      <input
        readonly="readonly"
        type="text"
      />
       
      <transition-stub
        class="popper"
        name="fade"
      >
        <div
          class="root"
          style="display: none;"
        >
          <span
            class="arrow"
            style="display: none;"
          />
           
          <div
            border="true"
            class="root listview"
            tabindex="0"
          >
            <div
              style="display: none;"
            >
              <!---->
               
              <span
                vusion-slot-name="title"
              >
                列表
              </span>
               
              <div>
                <!---->
              </div>
            </div>
             
            <!---->
             
            <div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              style="display: none;"
            >
               
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
       
      <!---->
    </div>
     
    <div
      disabled="disabled"
    >
      <span>
        b
      </span>
       
      <span
        style="display: none;"
      >
        
      </span>
       
      <!---->
       
      <input
        disabled="disabled"
        type="text"
      />
       
      <transition-stub
        class="popper"
        name="fade"
      >
        <div
          class="root"
          style="display: none;"
        >
          <span
            class="arrow"
            style="display: none;"
          />
           
          <div
            border="true"
            class="root listview"
            tabindex="0"
          >
            <div
              style="display: none;"
            >
              <!---->
               
              <span
                vusion-slot-name="title"
              >
                列表
              </span>
               
              <div>
                <!---->
              </div>
            </div>
             
            <!---->
             
            <div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              style="display: none;"
            >
               
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo-可清空 1`] = `
<div>
  <div
    clearable="可清空"
  >
    <span>
      b
    </span>
     
    <span
      style="display: none;"
    >
      
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <span>
      <!---->
       
      <!---->
       
      <span />
    </span>
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo-基本用法 1`] = `
<div>
  <div
    maxlength="12"
  >
    <span>
      b
    </span>
     
    <span>
      请输入
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo-大小扩展 1`] = `
<div>
  <div
    class="root"
    direction="vertical"
    type=""
    vusion-slot-name="default"
  >
    <div
      class="root"
      direction="horizontal"
      type=""
      vusion-slot-name="default"
    >
      <div
        readonly="readonly"
        size="mini"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="mini"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
        size="mini small"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="mini small"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
        size="mini normal"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="mini normal"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
        size="mini medium"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="mini medium"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="root"
      direction="horizontal"
      type=""
      vusion-slot-name="default"
    >
      <div
        readonly="readonly"
        size="small mini"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="small mini"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
        size="small"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="small"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
        size="small normal"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="small normal"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
        size="small medium"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="small medium"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="root"
      direction="horizontal"
      type=""
      vusion-slot-name="default"
    >
      <div
        readonly="readonly"
        size="normal mini"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="normal mini"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
        size="normal small"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="normal small"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
        size="normal medium"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="normal medium"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="root"
      direction="horizontal"
      type=""
      vusion-slot-name="default"
    >
      <div
        readonly="readonly"
        size="medium mini"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="medium mini"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
        size="medium small"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="medium small"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
        size="medium normal"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="medium normal"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <div
        readonly="readonly"
        size="medium"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="medium"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="root"
      direction="horizontal"
      type=""
      vusion-slot-name="default"
    >
      <div
        readonly="readonly"
        size="large"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="large"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="root"
      direction="horizontal"
      type=""
      vusion-slot-name="default"
    >
      <div
        readonly="readonly"
        size="huge"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="huge"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="root"
      direction="horizontal"
      type=""
      vusion-slot-name="default"
    >
      <div
        readonly="readonly"
        size="huge full"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          readonly="readonly"
          size="huge full"
          type="text"
        />
         
        <transition-stub
          class="popper"
          name="fade"
        >
          <div
            class="root"
            style="display: none;"
          >
            <span
              class="arrow"
              style="display: none;"
            />
             
            <div
              border="true"
              class="root listview"
              tabindex="0"
            >
              <div
                style="display: none;"
              >
                <!---->
                 
                <span
                  vusion-slot-name="title"
                >
                  列表
                </span>
                 
                <div>
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                style="display: none;"
              >
                 
                <!---->
              </div>
            </div>
          </div>
        </transition-stub>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo-展示方式 1`] = `
<div>
  <div
    class="root"
    direction="vertical"
    gap="small"
    type=""
    vusion-slot-name="default"
  >
    <div
      maxlength="12"
    >
      <span>
        b
      </span>
       
      <span>
        行内展示（默认）
      </span>
       
      <!---->
       
      <input
        type="text"
      />
       
      <transition-stub
        class="popper"
        name="fade"
      >
        <div
          class="root"
          style="display: none;"
        >
          <span
            class="arrow"
            style="display: none;"
          />
           
          <div
            border="true"
            class="root listview"
            tabindex="0"
          >
            <div
              style="display: none;"
            >
              <!---->
               
              <span
                vusion-slot-name="title"
              >
                列表
              </span>
               
              <div>
                <!---->
              </div>
            </div>
             
            <!---->
             
            <div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              style="display: none;"
            >
               
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
       
      <!---->
    </div>
     与文字对齐
    
    <div
      display="block"
      maxlength="12"
    >
      <span>
        b
      </span>
       
      <span>
        块级展示
      </span>
       
      <!---->
       
      <input
        type="text"
      />
       
      <transition-stub
        class="popper"
        name="fade"
      >
        <div
          class="root"
          style="display: none;"
        >
          <span
            class="arrow"
            style="display: none;"
          />
           
          <div
            border="true"
            class="root listview"
            tabindex="0"
          >
            <div
              style="display: none;"
            >
              <!---->
               
              <span
                vusion-slot-name="title"
              >
                列表
              </span>
               
              <div>
                <!---->
              </div>
            </div>
             
            <!---->
             
            <div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              style="display: none;"
            >
               
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo-展示方式 2`] = `
<div>
  <div
    class="root"
    direction="vertical"
    gap="small"
    type=""
    vusion-slot-name="default"
  >
    <div
      maxlength="12"
    >
      <span>
        b
      </span>
       
      <span>
        行内展示（默认）
      </span>
       
      <!---->
       
      <input
        type="text"
      />
       
      <transition-stub
        class="popper"
        name="fade"
      >
        <div
          class="root"
          style="display: none;"
        >
          <span
            class="arrow"
            style="display: none;"
          />
           
          <div
            border="true"
            class="root listview"
            tabindex="0"
          >
            <div
              style="display: none;"
            >
              <!---->
               
              <span
                vusion-slot-name="title"
              >
                列表
              </span>
               
              <div>
                <!---->
              </div>
            </div>
             
            <!---->
             
            <div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              style="display: none;"
            >
               
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
       
      <!---->
    </div>
     与文字对齐
    
    <div
      display="block"
      maxlength="12"
    >
      <span>
        b
      </span>
       
      <span>
        块级展示
      </span>
       
      <!---->
       
      <input
        type="text"
      />
       
      <transition-stub
        class="popper"
        name="fade"
      >
        <div
          class="root"
          style="display: none;"
        >
          <span
            class="arrow"
            style="display: none;"
          />
           
          <div
            border="true"
            class="root listview"
            tabindex="0"
          >
            <div
              style="display: none;"
            >
              <!---->
               
              <span
                vusion-slot-name="title"
              >
                列表
              </span>
               
              <div>
                <!---->
              </div>
            </div>
             
            <!---->
             
            <div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              style="display: none;"
            >
               
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo-添加图标 1`] = `
<div>
  <div
    class="root"
    direction="horizontal"
    type=""
    vusion-slot-name="default"
  >
    <div
      prefix="search"
      size="normal medium"
    >
      <span>
        b
      </span>
       
      <span>
        1~12位小写字母
      </span>
       
      <!---->
       
      <input
        size="normal medium"
        type="text"
      />
       
      <transition-stub
        class="popper"
        name="fade"
      >
        <div
          class="root"
          style="display: none;"
        >
          <span
            class="arrow"
            style="display: none;"
          />
           
          <div
            border="true"
            class="root listview"
            tabindex="0"
          >
            <div
              style="display: none;"
            >
              <!---->
               
              <span
                vusion-slot-name="title"
              >
                列表
              </span>
               
              <div>
                <!---->
              </div>
            </div>
             
            <!---->
             
            <div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              style="display: none;"
            >
               
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
       
      <span>
        <!---->
         
        <!---->
         
        <!---->
      </span>
    </div>
     
    <div
      size="normal medium"
      suffix="search"
    >
      <span>
        b
      </span>
       
      <span>
        1~12位小写字母
      </span>
       
      <!---->
       
      <input
        size="normal medium"
        type="text"
      />
       
      <transition-stub
        class="popper"
        name="fade"
      >
        <div
          class="root"
          style="display: none;"
        >
          <span
            class="arrow"
            style="display: none;"
          />
           
          <div
            border="true"
            class="root listview"
            tabindex="0"
          >
            <div
              style="display: none;"
            >
              <!---->
               
              <span
                vusion-slot-name="title"
              >
                列表
              </span>
               
              <div>
                <!---->
              </div>
            </div>
             
            <!---->
             
            <div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              style="display: none;"
            >
               
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
       
      <span>
        <!---->
         
        <!---->
         
        <!---->
      </span>
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-auto-complete.vue Demo-自动扩展大小 1`] = `
<div
  class="root"
  direction="horizontal"
  type=""
  vusion-slot-name="default"
>
  <div
    auto-size="horizontal"
  >
    <span>
      b
    </span>
     
    <span
      style="display: none;"
    >
      
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
   
  <!---->
   
  <!---->
</div>
`;

exports[`u-auto-complete.vue Demo-自定义样式 1`] = `
<div
  class="root"
  direction="horizontal"
  type=""
  vusion-slot-name="default"
>
  <div
    class="custom"
    maxlength="12"
  >
    <span>
      b
    </span>
     
    <span>
      class
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
   
  <div
    maxlength="12"
    style="background: rgb(247, 248, 252); width: 200px;"
  >
    <span>
      b
    </span>
     
    <span>
      style
    </span>
     
    <!---->
     
    <input
      type="text"
    />
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      >
        <span
          class="arrow"
          style="display: none;"
        />
         
        <div
          border="true"
          class="root listview"
          tabindex="0"
        >
          <div
            style="display: none;"
          >
            <!---->
             
            <span
              vusion-slot-name="title"
            >
              列表
            </span>
             
            <div>
              <!---->
            </div>
          </div>
           
          <!---->
           
          <div>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            style="display: none;"
          >
             
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
     
    <!---->
  </div>
   
  <!---->
   
  <!---->
</div>
`;
